# Chimera

./: CHIMERA_MIGRATION_SUMMARY.md  ENHANCEMENTS_SUMMARY.md  README.md
benchmark/kernels/fused_moe_triton/: benchmark_chimera_fused_moe_triton.py
benchmark/llm_judge/: bench_chimera.py
benchmark/mtbench/: bench_chimera_eagle.py
docker/: Dockerfile.chimera  compose.chimera.yaml  k8s-chimera-distributed-sts.yaml  k8s-chimera-service.yaml
docs/: DOCKER_AND_DOCS_SUMMARY.md  chimera_migration.md
docs/advanced_features/: use_cases.md
docs/developer_guide/: cutedsl_integration.md  cutedsl_visual_guide.md  performance_tuning.md
docs/get_started/: tutorial.md
docs/references/: api_reference.md  monitoring.md  troubleshooting.md
python/: pyproject.toml
python/chimera/: __init__.py  bench_offline_throughput.py  bench_one_batch.py  bench_one_batch_server.py  bench_serving.py  check_env.py  cli.py  compile_deep_gemm.py  eval.py  global_config.py  jit_kernel.py  lang.py  launch_server.py  multimodal_gen.py  srt.py  test.py  utils.py
python/chimera/srt/utils/: environ.py
python/sglang/srt/: environ.py
python/sglang/srt/grpc/: chimera_scheduler.proto
python/sglang/srt/layers/: sampler.py  (+1 more)
sgl-kernel/: CMakeLists.txt  pyproject.toml
sgl-kernel/csrc/: common_extension.cc
sgl-kernel/include/: chimera_alias.h  sgl_kernel_ops.h
sgl-kernel/python/sgl_kernel/: __init__.py  _fa4_interface.py  attention.py  cutedsl_attention.py  cutedsl_expert_specialization.py  cutedsl_gemm.py  expert_specialization.py  gemm.py
sgl-model-gateway/bindings/python/: pyproject.toml
(+11 files in other folders)
